# project-kiwi

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/: logging_config.py  main.py
backend/agents/: base.py  scan_agent.py
backend/ai/: __init__.py  base.py  claude.py  manual.py  openai_provider.py
backend/config/: settings.py  user_profile.py  validate.py
backend/core/: ai_readiness.py  application_readiness.py  deduplication.py  job_intelligence.py  listing_url.py  matcher.py  retry.py  timezone.py  visa_tagger.py
backend/database/: models.py  queries.py  session.py
backend/job_summary/: __init__.py  extractor.py  formatter.py  models.py  service.py
backend/notifications/: __init__.py  base.py  service.py  telegram.py  templates.py
backend/prompt_engine/: __init__.py  actions.json  engine.py  registry.py
backend/resume/: __init__.py  base.py  regex_parser.py  text_extraction.py
backend/scheduler/: scheduler.py
backend/scrapers/: backpacker.py  base.py  indeed.py  picknz.py  seasonal.py  seek.py  trademe.py
docs/: PRD.md  ROADMAP.md  TELEGRAM_SETUP.md  VISION.md
extension/: README.md  manifest.json
extension/background/: service-worker.js
extension/content/: content-script.js  content-styles.css  kiwi-detect.js
extension/lib/: field-mapping.js
extension/popup/: popup.css  popup.html  popup.js
extension/test-page/: sample-form.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
scripts/: seed_jobs.py  setup.sh
tests/: conftest.py
(+76 files in other folders)
